fixed css error in index which shifted whole paged added datatable in FattureView.vue

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-body {
-    display: flex;
-    justify-content: center;
-}
 #app {
     flex: 1 1 100%;
 }
